service/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shield
  labels:
    app: shield
spec:
  containers:
  - name: shield
    image: yrueshgrg/notes-k8s
    ports:
    - containerPort: 8000
---
apiVersion: v1
kind: Pod
metadata:
  name: hydra
  labels:
    app: hydra
spec:
  containers:
  - name: hydra
    image: yrueshgrg/notes-k8s
    ports:
    - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-shield
spec:
  type: NodePort
  selector:
    app: shield
  ports:
  - port: 8080
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hydra
spec:
  type: NodePort
  selector:
    app: hydra
  ports:
  - port: 8080
    targetPort: 8000
